Fix add to set input alignment.
Change thumbnail selected color.

--- a/app/assets/stylesheets/src_images.css.scss
+++ b/app/assets/stylesheets/src_images.css.scss
@@ -3,11 +3,11 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 .selected {
-  background-color: orange;
+  background-color: #ffb700;
 }
 
 .input-prepend {
-  margin-top: 5px;
+  margin-top: 10px;
 }
 
 .under-construction {
